<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/front"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/frente_celeste"
        android:contentDescription="@string/frente_del_cubo"
        android:tag="celeste"/>

    <ImageView
        android:id="@+id/top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/arriba_amarillo"
        tools:layout_editor_absoluteX="88dp"
        tools:layout_editor_absoluteY="257dp"
        app:layout_constraintBottom_toTopOf="@id/front"
        app:layout_constraintStart_toStartOf="@id/front"
        android:contentDescription="@string/arriba_del_cubo"
        android:tag="amarillo"/>

    <ImageView
        android:id="@+id/side"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/costado_rojo"
        tools:layout_editor_absoluteX="196dp"
        tools:layout_editor_absoluteY="257dp"
        app:layout_constraintStart_toEndOf="@id/front"
        app:layout_constraintBottom_toBottomOf="@id/front"
        android:contentDescription="@string/costado_del_cubo"
        android:tag="rojo"/>

    <ImageButton
        android:id="@+id/arrow_top_left"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/left_top"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/arrow_top"
        app:layout_constraintBottom_toTopOf="@id/arrow_left"
        android:contentDescription="@string/flecha_superior_izquierda" />

    <ImageButton
        android:id="@+id/arrow_top"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/top"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/top"
        app:layout_constraintStart_toStartOf="@id/front"
        app:layout_constraintEnd_toEndOf="@id/front"
        android:contentDescription="@string/flecha_superior" />

    <ImageButton
        android:id="@+id/arrow_left"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/left"
        tools:layout_editor_absoluteX="31dp"
        tools:layout_editor_absoluteY="337dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/front"
        app:layout_constraintTop_toTopOf="@id/front"
        app:layout_constraintBottom_toBottomOf="@id/front"
        android:contentDescription="@string/flecha_izquierda" />

    <ImageButton
        android:id="@+id/arrow_right"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/right"
        tools:layout_editor_absoluteX="31dp"
        tools:layout_editor_absoluteY="337dp"
        app:layout_constraintStart_toEndOf="@id/side"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/front"
        app:layout_constraintBottom_toBottomOf="@id/front"
        android:contentDescription="@string/flecha_derecha" />

    <ImageButton
        android:id="@+id/arrow_bottom"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/bottom"
        tools:layout_editor_absoluteX="31dp"
        tools:layout_editor_absoluteY="337dp"
        app:layout_constraintTop_toBottomOf="@id/front"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/front"
        app:layout_constraintEnd_toEndOf="@id/front"
        android:contentDescription="@string/flecha_inferior" />

    <ImageButton
        android:id="@+id/arrow_bottom_right"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/right_bottom"
        tools:layout_editor_absoluteX="31dp"
        tools:layout_editor_absoluteY="337dp"
        app:layout_constraintTop_toBottomOf="@id/arrow_right"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/arrow_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/flecha_inferior_derecha" />

</androidx.constraintlayout.widget.ConstraintLayout>